recursion.cons.length.Length.scala.code
def length(l:List[Int]): Int = {
  if (l == Nil) {
    return 0
  }
  return length(l.tail())
}